- Internal Synthlink now doubles the cost of the instrument into which it is taken instead of adding double the cost to the instrument. This is based on the way Internal Smartgun's cost is described in the core rulebook.

Changed/New Strings:
- LimitCondition_SkillsActiveLeadership

Build 225
Application Changes:
- Added the ability to re-apply the improvements of individual items instead of only for the entire character all at once. Implements #4628.
- Attempting to reassign or reapply priorities or metatypes that give access to special attributes and/or skills linked to special attributes no longer causes Chummer to crash.
- Fixed some rare bugs and crashes that could occur when writing to a file that Chummer was simultaneously attempting to read in.
- Trying to add an item with a weapon select entry that relies on selecting for weapon details no longer causes a crash. Fixes #4934.
- Markup and Black Market Pipeline cost modifiers applied to a weapon mount now properly apply based on all options of the weapon mount instead of just its size. Fixes #4933.
- Added the option to character settings to apply a custom post-processing effect (using Chummer's document-invariant XPath processor) to essence modifiers after they have all been collected but before they are applied to 'ware essence costs.
- Fixed up various irregularities from dropdown box items that would creep in as Chummer open for longer and longer.
- Vehicle mods that override a vehicle's armor, e.g. armor mods under the drone modding rules of Rigger 5.0, now work properly.
- The karma cost of learning new spells is no longer much higher than it should be.
- Added support for bonus nodes that add RES- and/or DEP-specific Essence modifiers in the same vein as the existing MAG-specific Essence modifiers.